name:                rally-cli-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bouzuya/rally-cli-hs#readme
license:             BSD3
license-file:        LICENSE
author:              bouzuya
maintainer:          m@bouzuya.net
copyright:           2017 bouzuya
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Command.Export
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable rally
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rally-cli-hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite rally-cli-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , rally-cli-hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/bouzuya/rally-cli-hs
